--- a/src/front-end/pages/Inventory.html
+++ b/src/front-end/pages/Inventory.html
@@ -2,6 +2,108 @@
 <html lang="en">
 <head>
   <title>Item Information Form</title>
+
+  <style>
+    /* General styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f9f9f9;
+    }
+
+    h1, h2 {
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    form {
+      max-width: 600vw;
+      height: 100vh;
+      background-color: #84a98c;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      margin-right: 10px;
+    }
+
+    /* Button styles */
+    .btn-save {
+      background-color: #4CAF50; /* Green */
+      color: white;
+    }
+
+    .btn-getAll {
+      background-color: #2196F3; /* Blue */
+      color: white;
+    }
+
+    .btn-update {
+      background-color: #FFC107; /* Amber */
+      color: white;
+    }
+
+    .btn-delete {
+      background-color: #F44336; /* Red */
+      color: white;
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background-color: white;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f4f4f4;
+      font-weight: bold;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+    h2 {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+
+    div {
+      display: inline-block;
+      margin-bottom: 15px;
+      margin-right: 63px;
+    }
+  </style>
 </head>
 <body>
 <h1>Item Information Form</h1>
@@ -36,16 +138,23 @@
     <input type="text" id="size" name="size">
   </div>
 
+  <div>
+    <label for="itemQty">Item qty:</label>
+    <input type="number" id="itemQty" name="itemQty" min="1" required>
+  </div>
+
   <!-- Field for Supplier Code -->
   <div>
     <label for="supplierCode">Supplier code:</label>
-    <input type="text" id="supplierCode" name="supplierCode" required>
+    <select id="supplierCode" name="supplierCode">
+    </select>
   </div>
 
   <!-- Field for Supplier Name -->
   <div>
     <label for="supplierName">Supplier name:</label>
-    <input type="text" id="supplierName" name="supplierName" required>
+    <select id="supplierName" name="supplierName">
+    </select>
   </div>
 
   <!-- Field for Unit Price - Sale -->
@@ -82,9 +191,32 @@
     </select>
   </div>
 
-  <!-- Submit Button -->
-  <button type="submit">Submit</button>
+  <div>
+    <button type="submit" class="btn-save">Save</button>
+    <button type="button" class="btn-getAll">GetAll</button>
+    <button type="button" class="btn-update">Update</button>
+    <button type="button" class="btn-delete">Delete</button>
+  </div>
 
+  <table>
+    <tr>
+      <th>Item code</th>
+      <th>Item desc</th>
+      <th>Item picture</th>
+      <th>Category</th>
+      <th>Size</th>
+      <th>Item qty</th>
+      <th>Supplier code</th>
+      <th>Supplier name</th>
+      <th>Unit price - Sale</th>
+      <th>Unit price - Buy</th>
+      <th>Expected Profit</th>
+      <th>Profit margin</th>
+      <th>Status</th>
+    </tr>
+
+    <!-- Additional rows can be added here for more customers -->
+  </table>
   <script>
     // Calculate expected profit and profit margin
     document.getElementById('unitPriceSale').addEventListener('input', calculateProfitAndMargin);
